# ModernCuda

./: .gitignore  README.md
codes/MPIOpenMP/01/: CMakeLists.txt  README.txt  main.cpp
codes/cmake/info/01/: CMakeLists.txt
codes/cudaDeviceProp/01/: CMakeLists.txt  README.txt  main.cu
codes/cudaDeviceProp/02/: README.txt  main.cu
codes/cudaMPI/01/: CMakeLists.txt  README.txt  main.cpp
codes/cudaMPIOpenMP/01/: CMakeLists.txt
codes/cudaOpenMP/01/: CMakeLists.txt  main.cu
codes/cudaOpenMP/02/: main.cu
codes/cudaOpenMP/03/: main.cu
codes/helloworld/01/: CMakeLists.txt  main.cu
codes/openmp/01/: CMakeLists.txt  main.cu
codes/openmp/02/: CMakeLists.txt  main.cu
codes/threadIdx/01/: CMakeLists.txt
codes/threadIdx/02/: CMakeLists.txt  main.cu
codes/time/duration_cast/01a/: main.cpp
codes/time/duration_cast/01b/: main.cpp
codes/time/duration_cast/02/: CMakeLists.txt  main.cpp
codes/time/duration_cast/03/: main.cpp
codes/vectorAdd/01/: TimeSpan.cpp  TimeSpan.h  main.cu
codes/vectorAdd/02/: CMakeLists.txt  TimeSpan.cpp  main.cu
codes/vectorAdd/03/: main.cu
